@@ -452,6 +452,7 @@
                         <argLine>
                             @{argLine}
                             --enable-preview
+                            --enable-native-access=ALL-UNNAMED
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
@@ -490,6 +491,7 @@
                         <argLine>
                             @{argLine}
                             --enable-preview
+                            --enable-native-access=ALL-UNNAMED
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
